examples/test/testpolicy12499.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12499
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key45: value20
      key26: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value17
      podSelector:
        matchLabels:
          key25: value4
          key13: value47
